--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "author": "Fran Linde",
   "license": "ISC",
   "dependencies": {
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -29,6 +31,8 @@
     "mongoose": "^7.2.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
